--- a/project/02-02/index.html
+++ b/project/02-02/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/webp" href="../../res/favicon.webp">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/webp" href="../../res/favicon.webp" />
     <title>Ninja Ken | Social Link</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
-    <link rel="stylesheet" href="./res/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap" />
+    <link rel="stylesheet" href="./res/style.css" />
 
-    <meta property="og:title" content="Ninja Ken">
-    <meta property="og:site_name" content="Social Link">
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="Social Link oleh Ninja Ken">
-    <meta property="og:image" content="./res/opengraph.webp">
+    <meta property="og:title" content="Ninja Ken" />
+    <meta property="og:site_name" content="Social Link" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Social Link oleh Ninja Ken" />
+    <meta property="og:image" content="./res/opengraph.webp" />
 </head>
 
 <body>
