--- a/project/01-04/dashboard.html
+++ b/project/01-04/dashboard.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-scope" content="profile email">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-signin-scope" content="profile email" />
     <meta name="google-signin-client_id"
-        content="1069380228253-hua6ngi9thijgea7gvjoqkmhag311h9i.apps.googleusercontent.com">
-    <link rel="icon" type="image/webp" href="../../res/favicon.webp">
+        content="1069380228253-hua6ngi9thijgea7gvjoqkmhag311h9i.apps.googleusercontent.com" />
+    <link rel="icon" type="image/webp" href="../../res/favicon.webp" />
     <title>Dashboard | Bukan Instagram</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
-    <link rel="stylesheet" href="./res/dashboard.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap" />
+    <link rel="stylesheet" href="./res/dashboard.css" />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 
