--- a/project/03/index.html
+++ b/project/03/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/webp" href="../../res/favicon.webp">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/webp" href="../../res/favicon.webp" />
     <title>Jan-Ken Game</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Questrial&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap">
-    <link rel="stylesheet" href="./res/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Questrial&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" />
+    <link rel="stylesheet" href="./res/style.css" />
 </head>
 
 <body>
